--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,29 @@ plugins:
   - jekyll-octicons
   - jekyll-github-metadata
 
+# Sidebar settings
+sidebar: true  #添加侧边栏
+sidebar-about-description: "HIT-SZer"
+sidebar-avatar: /img/miaodeshui.jpg     #你的大头贴，请使用绝对地址.注意：名字区分大小写！后缀名也是
+
+# Featured Tags
+featured-tags: true  
+featured-condition-size: 1     # A tag will be featured if the size of it is more than this condition value
+
+#commont
+disqus_username: deshui miao
+
+# SNS settings
+RSS: false
+jianshu_username: 	jianshu_id 
+zhihu_username:     username
+facebook_username:  username
+github_username:    username
+# weibo_username:   username
+
+# Build settings
+# paginate: 10              # 一页你准备放几篇文章
+
 titles_from_headings:
   enabled:     true
   strip_title: true
