--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ github_username:    username
 # weibo_username:   username
 
 # Build settings
-# paginate: 10              # 一页你准备放几篇文章
+paginate: 10              # 一页你准备放几篇文章
 
 titles_from_headings:
   enabled:     true
