--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: The homepage of MDS
+header-img: images/home-bg.jpg
 description: become better❤
 github_username: miaodeshui
 
